# RustExample

./: .dockerignore  Cargo.toml  Dockerfile
.github/workflows/: build.yml
.githubs/workflows/: build.yml
src/: main.rs
