[package]
name = "RustExample"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = "1.42.0"
serde = { version = "1.0.216", features = ["derive"] }
uuid = { version = "1.11.0", features = ["v4"] }
actix-web = "4.9.0"


utoipa = { version = "3.3.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["actix-web", "debug-embed"] }
